--- a/src/styles/components/navigation-bar.css
+++ b/src/styles/components/navigation-bar.css
@@ -1,6 +1,7 @@
 .navigation-bar {
   display: flex; /* for aligning items using modern CSS */
-  position: fixed;
+  position: sticky;
+  top: 0; /* so the bar is stick to the top of the screen */
   background-color: black;
   width: 100%;
   height: var(--navigation-bar);
