--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -4,27 +4,40 @@
 */
 button,
 .button {
+  display: inline-block;
   min-width: 136px; /* using min-width sets the initial size while allowing to grow as needed */
   height: 44px;
   margin-right: var(--space-small);
-  background-color: var(--color-netflix-red);
+  background-color: var(--color-gray-4);
   color: white;
   font-weight: bold;
   font-size: var(--default-text-size);
   border: none;
   border-radius: var(--radius);
   cursor: pointer;
+
+  /* Rules to make the <Link> look like a button */
+  line-height: 44px;
+  text-align: center;
+  vertical-align: top;
 }
 
-button .icon,
-.button .icon {
+button:hover,
+.button:hover {
+  background-color: var(--color-gray-3);
+  text-decoration: none;
+}
+
+button.icon,
+.button.icon {
   height: 16px;
   margin-right: var(--space-small);
   vertical-align: text-bottom; /* to align with the text */
 }
 
-.button-gray {
-  background-color: var(--color-gray-4);
+button.primary,
+.button.primary {
+  background-color: var(--color-netflix-red);
 }
 
 .button-white {
