--- a/src/styles/components/item-admin.css
+++ b/src/styles/components/item-admin.css
@@ -17,12 +17,24 @@
 
 .item-admin h3 {
   margin-bottom: 0;
-}
-
-.item-admin .buttons {
-  margin-left: auto;
+  margin-right: auto;
 }
 
 .item-admin button:last-child {
   margin-right: 0;
+}
+
+/* For episodes*/
+.item-admin .season-episode {
+  margin-right: var(--space-big);
+}
+
+.item-admin .season-episode .title {
+  text-transform: uppercase;
+  color: var(--color-gray-4);
+  display: block;
+}
+
+.item-admin .season-episode .numbers {
+  font-weight: bold;
 }
