--- a/src/styles/components/item-card.css
+++ b/src/styles/components/item-card.css
@@ -5,4 +5,9 @@
   background-color: var(--color-gray-3);
   border-radius: var(--radius);
   cursor: pointer;
+  transition: scale 0.2s ease-in;
+}
+
+.item-card:hover {
+  scale: 1.075;
 }
