--- a/src/styles/pages/media.css
+++ b/src/styles/pages/media.css
@@ -4,5 +4,5 @@
 
 /* Overrides the default behavior of having a single row of cards */
 #media .list-cards .container {
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
 }
