--- a/src/styles/base/layout.css
+++ b/src/styles/base/layout.css
@@ -30,6 +30,10 @@ img {
   object-fit: cover; /* To avoid streched images that look distorted */
 }
 
+code {
+  background-color: var(--color-gray-4);
+}
+
 .admin-pages {
   max-width: 960px;
   margin: auto;
