--- a/src/styles/pages/auth.css
+++ b/src/styles/pages/auth.css
@@ -29,3 +29,12 @@
 .auth footer {
   color: var(--color-gray-4);
 }
+
+.auth .warning {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.67);
+  padding: var(--space-medium);
+  bottom: 0;
+}
