--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -12,6 +12,7 @@
 @import "./components/input.css";
 @import "./components/input-field.css";
 @import "./components/input-image.css";
+@import "./components/input-text-area.css";
 @import "./components/input-select.css";
 @import "./components/item-admin.css";
 @import "./components/item-card.css";
