--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -29,4 +29,5 @@
 @import "./pages/media.css";
 @import "./pages/auth.css";
 @import "./pages/home.css";
+@import "./pages/not-found.css";
 @import "./pages/video-player.css";
